--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -40,6 +40,12 @@
   }
 } */
 
+/*"Shadows Into Light", cursive*/
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+
+/*'Dancing Script', cursive;*/
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Shadows+Into+Light&display=swap");
+
 html,
 body {
   overflow-x: hidden;
@@ -67,4 +73,52 @@ li {
 .main {
   display: flex;
   flex-flow: column nowrap;
+}
+
+/* THE NAVBAR ***/
+.nav {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-self: center;
+  padding: 20px 0;
+  width: 100%;
+  max-width: 1300px;
+  z-index: 1;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  font-family: "Dancing Script", cursive;
+}
+
+.nav .logo {
+  font-size: 18px;
+  line-height: 1.3em;
+  font-family: "Dancing Script", cursive;
+}
+
+.nav-menu ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  gap: 25px;
+}
+
+.nav-menu ul li a {
+  font-size: 16px;
+  line-height: 1.5em;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: color, transform, 300ms;
+}
+
+.nav-menu ul li a:hover,
+.nav-menu ul li a:focus {
+  color: #ffffff80;
+  transform: translateY(-3px);
 }
