--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -7,39 +7,6 @@
   --text-color: #fff;
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-} */
-
 /*"Shadows Into Light", cursive*/
 @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 
@@ -75,6 +42,7 @@ li {
   flex-flow: column nowrap;
 }
 
+/*---------------------------------------------------------------------------*/
 /* THE NAVBAR ***/
 .nav {
   display: flex;
@@ -154,4 +122,85 @@ ul {
   .nav-menu-mobile {
     display: none;
   }
+}
+
+/*---------------------------------------------------------------------------*/
+/* HERO SECTION */
+.hero {
+  display: flex;
+  flex-flow: column nowrap;
+  background: url("/me.jpg") no-repeat 20% 45% / cover;
+  padding: 0 20px;
+}
+
+.hero::before {
+  content: "";
+  display: block;
+  background: linear-gradient(
+    0deg,
+    rgba(18, 18, 18, 1) 10%,
+    rgba(255, 255, 255, 0) 50%
+  );
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+}
+
+.hero-content {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-self: center;
+  height: calc(100vh - 90.17px);
+  width: 100%;
+  max-width: 1300px;
+  color: var(--text-color);
+  z-index: 1;
+}
+
+.hero-content > div {
+  margin: -200px 0 0 0;
+}
+
+.hero-content p {
+  font-size: 12px;
+  line-height: 1.5em;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  margin: 0 0 12.5px 0;
+}
+
+.hero-content h1 {
+  font-size: 72px;
+  line-height: 1.1em;
+  margin: 0 0 12.5px -5px;
+}
+
+.hero-content h2 {
+  font-size: 18px;
+  line-height: 2em;
+  font-weight: 400;
+  margin: 0 0 25px 0;
+}
+
+.btn {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.5em;
+  text-decoration: none;
+  color: var(--text-color);
+  box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff00;
+  padding: 13px 39px;
+  border-radius: 3px;
+  transition: 300ms;
+}
+
+.btn:hover,
+.btn:focus {
+  color: #121212;
+  background: #fff;
+  box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
 }
