--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -96,6 +96,32 @@ ul {
   line-height: 1.3em;
 }
 
+.mobile-nav {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  background-color: #121212;
+  width: 360px;
+  padding: 0 10px;
+}
+
+.mobile-nav ul li a {
+  font-size: 20px;
+  line-height: 2.5em;
+  display: block;
+  cursor: pointer;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: color, transform, 300ms;
+  margin: 5px 10px;
+}
+
+.mobile-nav ul li a:hover,
+.mobile-nav ul li a:focus {
+  color: #ffffff80;
+  transform: translateY(-3px);
+}
+
 /* NAVBAR MEDIA QUERY */
 @media screen and (max-width: 640px) {
   .nav-menu {
@@ -110,7 +136,11 @@ ul {
     display: flex;
     flex-flow: column wrap;
     align-self: center;
-    gap: 25px;
+    gap: 45px;
+  }
+
+  .hero-btn {
+    display: inline-block;
   }
 }
 
@@ -158,7 +188,6 @@ ul {
   width: 100%;
   max-width: 1300px;
   color: var(--text-color);
-  z-index: 1;
 }
 
 .hero-content > div {
@@ -203,4 +232,13 @@ ul {
   color: #121212;
   background: #fff;
   box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
+}
+
+.hero-btn {
+  display: flex;
+  gap: 12.5px;
+}
+
+.bold {
+  background-color: #ffffff80;
 }
