--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -243,7 +243,8 @@ ul {
   background-color: #ffffff80;
 }
 
-/*Projects side*/
+/*---------------------------------------------------------------------------*/
+/* PROJECTS SECTION*/
 
 .projects {
   display: flex;
@@ -258,9 +259,10 @@ ul {
 }
 
 .projects h3 {
-  font-size: 48px;
+  font-size: 75px;
   line-height: 1.1em;
-  margin: 0 0 50px 0;
+  margin: 0 0 90px 0;
+  text-transform: capitalize;
 }
 
 .projects .projects-wrapper {
@@ -299,11 +301,12 @@ ul {
 .projects .projects-wrapper .project-content .project-description {
   font-size: 16px;
   line-height: 1.5em;
+  text-align: justify;
 }
 
 .projects .projects-wrapper .project-content .project-icons {
   display: flex;
-  flex-flow: row norwap;
+  flex-flow: row nowrap;
   gap: 12.5px;
 }
 
@@ -326,6 +329,8 @@ ul {
 
   .projects h3 {
     padding: 0 20px;
+    font-size: 45px;
+    text-align: center;
   }
 
   .projects .projects-wrapper {
@@ -346,5 +351,119 @@ ul {
 
   .projects .projects-wrapper .project {
     flex: 0 0 90%;
+  }
+}
+
+/*---------------------------------------------------------------------------*/
+/* ABOUT SECTION*/
+
+.about {
+  width: 100%;
+  padding: 80px 0;
+}
+
+.about img {
+  height: auto;
+  width: 490px;
+  margin-bottom: 50px;
+}
+
+.about-content {
+  width: 570px;
+}
+
+.about-section {
+  width: 1130px;
+  max-width: 95%;
+  margin: 0 auto 0 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.about-content h1 {
+  font-size: 75px;
+  margin-bottom: 25px;
+  text-transform: capitalize;
+}
+
+.about-content h2 {
+  font-size: 22px;
+  margin-bottom: 25px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.about-content p {
+  font-size: 16.5px;
+  margin-bottom: 45px;
+  letter-spacing: 1px;
+  line-height: 28px;
+  text-align: justify;
+}
+
+.about-btn {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.5em;
+  text-decoration: none;
+  color: var(--text-color);
+  box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff00;
+  padding: 13px 39px;
+  border-radius: 3px;
+  transition: 300ms;
+  background-color: #121212;
+}
+
+.about-btn:hover,
+.about-btn:focus {
+  color: #121212;
+  background: #fff;
+  box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
+}
+
+@media (max-width: 767px) {
+  .about {
+    padding: 50px 0;
+  }
+
+  .about img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .about-content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .about-section {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .about-content h1 {
+    font-size: 45px;
+    margin-bottom: 20px;
+  }
+
+  .about-content h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .about-content p {
+    font-size: 12.5px;
+    margin-bottom: 30px;
+    text-align: justify;
+    margin: 5px 10px;
+  }
+
+  .about-btn {
+    display: block;
+    margin: 20px auto 0 auto;
+    padding: 10px 30px;
+    font-size: 14px;
   }
 }
