--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -159,7 +159,7 @@ ul {
 .hero {
   display: flex;
   flex-flow: column nowrap;
-  background: url("/me.jpg") no-repeat 20% 45% / cover;
+  background: url("/test.jpg") no-repeat 60% 120% / cover;
   padding: 0 20px;
 }
 
@@ -169,7 +169,7 @@ ul {
   background: linear-gradient(
     0deg,
     rgba(18, 18, 18, 1) 10%,
-    rgba(255, 255, 255, 0) 50%
+    rgba(255, 255, 255, 0) 60%
   );
   width: 100%;
   height: 100%;
@@ -249,7 +249,7 @@ ul {
 .projects {
   display: flex;
   flex-flow: column nowrap;
-  padding: 100px 20px;
+  padding: 120px 30px;
 }
 
 .projects > div {
@@ -324,7 +324,7 @@ ul {
 
 @media (max-width: 767px) {
   .projects {
-    padding: 100px 0;
+    padding: 80px 0;
   }
 
   .projects h3 {
@@ -359,7 +359,7 @@ ul {
 
 .about {
   width: 100%;
-  padding: 80px 0;
+  padding: 100px 0;
 }
 
 .about img {
@@ -373,12 +373,13 @@ ul {
 }
 
 .about-section {
-  width: 1130px;
+  width: 1300px;
   max-width: 95%;
   margin: 0 auto 0 5px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 42px;
 }
 
 .about-content h1 {
@@ -422,13 +423,14 @@ ul {
   box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 820px) {
   .about {
     padding: 50px 0;
+    width: 100%;
   }
 
   .about img {
-    width: 100%;
+    width: 50%;
     margin-bottom: 30px;
   }
 
@@ -439,7 +441,7 @@ ul {
 
   .about-section {
     flex-direction: column;
-    align-items: center;
+    align-self: center;
     justify-content: center;
   }
 
@@ -449,21 +451,121 @@ ul {
   }
 
   .about-content h2 {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 20px;
   }
 
   .about-content p {
-    font-size: 12.5px;
+    font-size: 16.5px;
     margin-bottom: 30px;
     text-align: justify;
-    margin: 5px 10px;
+    margin: 5px 20px;
   }
 
   .about-btn {
     display: block;
-    margin: 20px auto 0 auto;
+    margin: 40px auto 0 auto;
     padding: 10px 30px;
     font-size: 14px;
+  }
+}
+
+/* SKILLS SECTION*/
+
+.skills {
+  display: flex;
+  height: auto;
+}
+
+.skills > div {
+  align-self: center;
+  width: 100%;
+  max-width: 1300px;
+  padding: 120px 20px;
+}
+
+.skills-container {
+  width: 1300px;
+  max-width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8rem;
+}
+
+.skills h1 {
+  font-size: 75px;
+  line-height: 1.1em;
+  margin: 0 0 90px 0;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+}
+
+.skills h2 {
+  font-size: 32px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  margin-bottom: 25px;
+}
+
+.skills .skills-container .svg {
+  width: 144px;
+  height: 84px;
+  fill: white;
+  margin-bottom: 12.5px;
+  padding: 10px;
+}
+
+.skills ul li {
+  font-size: 18px;
+  text-transform: capitalize;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 2.5;
+}
+
+@media screen and (max-width: 768px) {
+  .skills-container {
+    flex-direction: column;
+    gap: 3rem;
+    align-self: center;
+    justify-content: center;
+  }
+
+  .skills .skills-container .svg {
+    width: 104px;
+    height: 64px;
+    fill: #fff;
+  }
+
+  .skills h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .skills ul li:last-child {
+    font-size: 14px;
+    line-height: 1.8;
+    padding-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .skills-container {
+    flex-direction: row wrap;
+    gap: 1.2rem;
+    align-self: center;
+    justify-content: center;
+  }
+
+  .skills h2 {
+    font-size: 20px;
+    margin: 0 0 50px 0;
+  }
+
+  .skills ul li {
+    font-size: 18px;
+    line-height: 2.2;
   }
 }
