--- a/my-website/src/components/About/about.module.css
+++ b/my-website/src/components/About/about.module.css
@@ -7,6 +7,12 @@
   height: auto;
   width: 490px;
   margin-bottom: 50px;
+  transform: scale(1, 1);
+  transition: transform 0.5s ease;
+}
+
+.avatar:hover {
+  transform: scale(1.2, 1.2);
 }
 
 .aboutContent {
@@ -55,6 +61,7 @@
   border-radius: 3px;
   transition: 300ms;
   background-color: #121212;
+  text-decoration: none;
 }
 
 .btn:hover,
@@ -62,6 +69,7 @@
   color: #121212;
   background: #fff;
   box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
+  transform: scale(1.3);
 }
 
 .span {
