--- a/my-website/src/styles/globals.css
+++ b/my-website/src/styles/globals.css
@@ -49,7 +49,7 @@ li {
   max-width: 1300px;
 }
 
-.projects h3 {
+.projects-header {
   font-size: 75px;
   line-height: 1.1em;
   margin: 0 0 90px 0;
@@ -62,15 +62,15 @@ li {
   gap: 50px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .projects {
     padding: 80px 0;
   }
 
-  .projects h3 {
+  .projects-header {
     padding: 0 20px;
-    font-size: 45px;
     text-align: center;
+    font-size: 45px;
   }
   .projects .projects-wrapper {
     flex-flow: row nowrap;
