--- a/my-website/src/components/Skills/skills.module.css
+++ b/my-website/src/components/Skills/skills.module.css
@@ -1,79 +1,93 @@
-.skills {
-  display: flex;
-  height: auto;
-}
-
-.wrapper {
-  align-self: center;
-  width: 100%;
-  max-width: 1300px;
-  padding: 120px 20px;
-}
-
 .container {
-  width: 1300px;
-  max-width: 95%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8rem;
+  width: 1200px !important;
+  padding: 0 !important;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.header {
-  font-size: 75px;
-  line-height: 1.1em;
-  margin: 0 0 90px 0;
-  text-transform: capitalize;
-  letter-spacing: 2px;
-}
-
-.svg {
-  width: 144px;
-  height: 84px;
-  fill: white;
-  margin-bottom: 12.5px;
-  padding: 10px;
-}
-
-.list li {
-  font-size: 18px;
-  text-transform: capitalize;
+.title {
   text-align: center;
-  letter-spacing: 2px;
-  line-height: 2.5;
+  padding: 0 !important;
+  margin-bottom: 40px;
+  font-size: 75px;
+  color: #fff;
+  font-weight: 600;
+  line-height: 60px;
 }
 
-@media screen and (max-width: 768px) {
-  .container {
-    flex-direction: column;
-    gap: 3rem;
-    align-self: center;
-    justify-content: center;
-  }
+.card {
+  max-width: 550px;
+  border: 0;
+  width: 100%;
+  margin-inline: auto;
+}
 
-  .svg {
-    width: 104px;
-    height: 64px;
-    fill: #fff;
-  }
+.containerCard {
+  position: relative;
+  border: 2px solid transparent;
+  background: linear-gradient(41deg, hsl(288, 8%, 25%), #1f1526, #080509);
+  background-clip: padding-box;
+  border-radius: 45px;
+  padding: 40px;
+}
 
-  .list li:last-child {
-    font-size: 14px;
-    line-height: 1.8;
-    padding-bottom: 20px;
+.cardTitle {
+  font-weight: 600;
+  color: gainsboro;
+  letter-spacing: 1px;
+  line-height: 40px;
+  font-size: 22px;
+  padding-bottom: 8px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.description {
+  font-weight: 600;
+  line-height: 32px;
+  color: #fff;
+  font-size: 16px;
+  max-width: 470px;
+  text-align: center;
+}
+
+.gradientCards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+  padding: 30px;
+  @media screen and (max-width: 991px) {
+    grid-template-columns: 1fr;
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (min-width: 992px) and (max-width: 1439px) {
   .container {
-    flex-direction: row wrap;
-    gap: 1.2rem;
-    align-self: center;
-    justify-content: center;
+    max-width: 1279px !important;
+    padding: 0 !important;
+    margin: 0 80px !important;
+    width: auto !important;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .container {
+    max-width: 959px !important;
+    margin: 0 16px !important;
+    padding: 0 !important;
+    width: auto !important;
+  }
+  .title {
+    font-size: 45px;
   }
 
-  .list li {
-    font-size: 18px;
-    line-height: 2.2;
+  .gradientCards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 32px;
+    padding: 30px;
+    @media screen and (max-width: 991px) {
+      grid-template-columns: 1fr;
+    }
   }
 }
