--- a/my-website/src/components/Contact/contact.module.css
+++ b/my-website/src/components/Contact/contact.module.css
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  padding: 120px 16px 60px;
+  padding: 120px 20px 60px 20px;
 }
 
 .innerWidth {
@@ -38,8 +38,8 @@
 }
 
 .avatar {
-  width: 24px;
-  height: 24px;
+  width: 34px;
+  height: 34px;
   object-fit: contain;
 }
 
@@ -59,7 +59,7 @@
   height: 2px;
   background-color: white;
   opacity: 0.1px;
-  margin-bottom: 50px;
+  margin: 20px 0 80px 0;
 }
 
 .container {
@@ -71,14 +71,14 @@
 }
 
 .headingContent {
-  font-size: 26px;
+  font-size: 20px;
   color: white;
   font-weight: 200;
   letter-spacing: 1px;
 }
 
 .copyRights {
-  font-size: 16px;
+  font-size: 14px;
   color: #fff;
   opacity: 40%;
   letter-spacing: 2px;
@@ -86,19 +86,26 @@
 
 .iconsContainer {
   display: flex;
-  gap: 4px;
+  gap: 12.5px;
 }
 
 .icons {
-  width: 24px;
-  height: 24px;
+  width: 34px;
+  height: 34px;
   cursor: pointer;
   object-fit: contain;
-  background-color: #fff;
 }
 
 @media (max-width: 768px) {
   .heading {
-    font-size: 44px;
+    font-size: 45px;
+  }
+
+  .iconsContainer {
+    padding: 20px 0 20px 0;
+  }
+
+  .headingContent {
+    font-size: 18px;
   }
 }
