--- a/my-website/src/components/Navbar/navbar.module.css
+++ b/my-website/src/components/Navbar/navbar.module.css
@@ -34,6 +34,7 @@
 .navMenu .listContainer li a {
   font-size: 16px;
   line-height: 1.5em;
+  letter-spacing: 3px;
   display: inline-block;
   cursor: pointer;
   text-decoration: none;
@@ -94,6 +95,7 @@
     align-self: center;
     gap: 45px;
     color: white;
-    text-decoration: none;
+    list-style-type: none;
+    letter-spacing: 3px;
   }
 }
