--- a/my-website/src/components/About/about.module.css
+++ b/my-website/src/components/About/about.module.css
@@ -21,8 +21,8 @@
 
 .aboutSection {
   width: 1300px;
-  max-width: 95%;
-  margin: 0 auto 0 5px;
+  max-width: 100%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,12 +56,12 @@
   font-size: 16px;
   line-height: 1.5em;
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
   box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff00;
   padding: 13px 39px;
   border-radius: 3px;
   transition: 300ms;
-  background-color: #121212;
+  letter-spacing: 2px;
 }
 
 .btn:hover,
@@ -69,7 +69,6 @@
   color: #121212;
   background: #fff;
   box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
-  transform: scale(1.1);
 }
 
 .span {
@@ -119,13 +118,5 @@
     margin-bottom: 30px;
     text-align: justify;
     margin: 5px 20px;
-  }
-
-  .btn {
-    display: block;
-    margin: 40px auto 0 auto;
-    padding: 10px 30px;
-    font-size: 14px;
-    text-decoration: none;
   }
 }
