--- a/my-website/src/components/Contact/contact.module.css
+++ b/my-website/src/components/Contact/contact.module.css
@@ -27,25 +27,29 @@
 }
 
 .btn {
-  display: flex;
-  align-items: center;
-  padding: 6px 4px;
-  background-color: #25618b;
-  gap: 12px;
-  border-radius: 32px;
-  border-radius: 32px;
-  background-color: azure;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.5em;
+  text-decoration: none;
+
+  padding: 13px 29px;
+  border-radius: 10px;
+  transition: 300ms;
   letter-spacing: 2px;
 }
 
+.btn:hover,
+.btn:focus {
+  box-shadow: inset 0 0 0 1px #ffffff40, 0 10px 30px -10px #ffffff80;
+}
+
 .avatar {
-  width: 34px;
-  height: 34px;
-  object-fit: contain;
+  width: 24px;
+  height: 24px;
 }
 
 .home {
-  font-size: 16px;
+  font-size: 20px;
   color: #121212;
   padding: 12.5px;
   text-decoration: none;
@@ -91,6 +95,7 @@
 }
 
 .icons {
+  fill: #fff;
   width: 34px;
   height: 34px;
   cursor: pointer;
