--- a/my-website/src/components/Skills/skills.module.css
+++ b/my-website/src/components/Skills/skills.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 1200px !important;
+  width: 1300px !important;
   padding: 0 !important;
   margin-right: auto;
   margin-left: auto;
@@ -17,7 +17,7 @@
 }
 
 .card {
-  max-width: 550px;
+  max-width: 430px;
   border: 0;
   width: 100%;
   margin-inline: auto;
@@ -26,10 +26,15 @@
 .containerCard {
   position: relative;
   border: 2px solid transparent;
-  background: linear-gradient(41deg, hsl(288, 8%, 25%), #1f1526, #080509);
+  background: linear-gradient(41deg, #ffffff1a, #ffffff0d, #080509);
   background-clip: padding-box;
-  border-radius: 45px;
-  padding: 40px;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.containerCard:hover {
+  background: #ffffff1a;
+  background: linear-gradient(65deg, #5c59591a, #ffffff0d, #3b3a3c);
 }
 
 .cardTitle {
