--- a/my-website/src/components/About/about.module.css
+++ b/my-website/src/components/About/about.module.css
@@ -17,7 +17,7 @@
 }
 
 .aboutContent {
-  width: 570px;
+  width: 100%;
 }
 
 .aboutSection {
@@ -27,12 +27,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 42px;
+  gap: 20px;
 }
 
 .aboutContent h1 {
   font-size: 75px;
-  margin-bottom: 25px;
+  margin-bottom: 55px;
   text-transform: capitalize;
   letter-spacing: 5px;
 }
