--- a/my-website/src/components/Contact/contact.module.css
+++ b/my-website/src/components/Contact/contact.module.css
@@ -100,6 +100,24 @@
   height: 34px;
   cursor: pointer;
   object-fit: contain;
+  transition: 300ms;
+}
+
+.github {
+  background-color: #fff;
+  width: 34px;
+  height: 34px;
+  cursor: pointer;
+  object-fit: contain;
+  transition: 300ms;
+}
+
+.icons:hover {
+  transform: scale(1.1);
+}
+
+.github:hover {
+  transform: scale(1.1);
 }
 
 @media (max-width: 768px) {
